src/objects/Account_Tax__c.object
<CustomObject>
    <fields>
        <fullName>Account_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipName>Tax_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Required_Icon__c</fullName>
        <formula>IMAGE( IF(Approval_Required__c = True , &quot;/img/msg_icons/error24.png&quot;,&quot;&quot;), &quot;&quot;)</formula>
        <label>Approval Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conversion_ID__c</fullName>
        <externalId>true</externalId>
        <label>Conversion ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Exclude_Weekends__c</fullName>
        <formula>CASE( 
MOD( Sent_for_Approval_Date__c - DATE( 1900, 1, 7 ), 7 ), 
3, Sent_for_Approval_Date__c + 2 + 3, 
4, Sent_for_Approval_Date__c + 2 + 3, 
5, Sent_for_Approval_Date__c + 2 + 3, 
6, Sent_for_Approval_Date__c + 1 + 3, 
Sent_for_Approval_Date__c + 3 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exclude Weekends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finance_Controller_Tax_Validation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Controller Tax Validation</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tax_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mini_Account_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipName>Account_Taxs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mini_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tax Details</relationshipLabel>
        <relationshipName>Account_Taxs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mini_Tax_Category__c</fullName>
        <label>Tax Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_TaxCaterory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mini_Tax_Classification__c</fullName>
        <label>Tax Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_TaxClassification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mini_Tax_Country__c</fullName>
        <label>Tax Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_TaxCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reject_to_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reject to Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_PO_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAP PO Updated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <formula>TEXT( Mini_Account__r.Sales_Organization__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_for_Approval_Date__c</fullName>
        <label>Sent for Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Updated_Request_Validation__c</fullName>
        <label>Update Request Validation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_RequestValidation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_Tax_Category__c</fullName>
        <label>Updated Tax Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_TaxCaterory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_Tax_Classification__c</fullName>
        <label>Updated Tax Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_TaxClassification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_Tax_Country__c</fullName>
        <label>Updated Tax Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_TaxCountry</valueSetName>
        </valueSet>
    </fields>
    <label>Tax Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AT{0000000000}</displayFormat>
        <label>Account Tax Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Pending_Approval</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Setup.ValidationRulesSettings__c.TaxDetailValidationRule__c ,  Approval_Required__c = true, OR(ISCHANGED(Mini_Tax_Classification__c),  ISCHANGED(Updated_Tax_Classification__c),  ISCHANGED(Mini_Tax_Category__c),  ISCHANGED(Updated_Tax_Category__c), ISCHANGED(Mini_Tax_Country__c) ,ISCHANGED(Updated_Tax_Country__c)))</errorConditionFormula>
        <errorMessage>An Approval is already in progress. Please do not request for a change. If needed recall existing approval</errorMessage>
    </validationRules>
</CustomObject>